# fenicsx_ii

./: .gitignore  LICENSE  README.md  _config.yml  _toc.yml  pyproject.toml  references.bib
.github/: dependabot.yml
.github/workflows/: build_docs.yml  deploy.yml  formatting.yml  pypi.yml  tests.yml
demos/: coupled_domains.py  coupled_poisson.py  coupled_poisson_high_level.py  coupled_poisson_solver.py
docs/: api.rst  ufl_modifications.rst
src/fenicsx_ii/: __init__.py  assembly.py  interpolation.py  interpolation_utils.py  matrix_assembler.py  quadrature.py  restriction_operators.py  solver.py  ufl_operations.py  utils.py  vector_assembler.py
tests/: test_3D_1D_coupling.py  test_average_coefficient.py  test_circle_quadrature.py  test_interpolation_matrix.py  test_new_operator.py
