[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "fenicsx_ii"
version = "0.3.0"
description = "Mixed-dimensional coupling in FEniCSx"
authors = [{ name = "Jørgen S. Dokken", email = "dokken@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["fenics-dolfinx>=0.10.0,<0.11.0"]


[project.optional-dependencies]
test = ["pytest", "sympy"]
dev = ["pdbpp", "ipython", "mypy", "ruff"]
docs = ["jupyter-book", "jupytext", "sphinx-codeautolink"]
jupyter = ["trame_jupyter_extension", "trame", "pyvista[all]>=0.45.0"]
all = [
    "fenicsx_ii[test]",
    "fenicsx_ii[dev]",
    "fenicsx_ii[docs]",
    "fenicsx_ii[jupyter]",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["docs/", "build/"]
# Folder to check with mypy
files = ["src", "tests"]

[tool.ruff]
src = ["src", "docs", "tests", "examples"]
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]


[tool.ruff.lint.isort]
known-first-party = ["fenicsx_iis"]
known-third-party = [
    "basix",
    "dolfinx",
    "ffcx",
    "ufl",
    "gmsh",
    "numpy",
    "pytest",
    "pyadjoint",
]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
